GDPR-10 Adding Application Insights configuration (#6)
* GDPR-10 Adding Application Insights configuration

* GDPR-10 Updating versions, tightening build.gradle and application.yml